--- a/index.html
+++ b/index.html
@@ -76,8 +76,22 @@
       if(!r.ok) throw new Error('HTTP ' + r.status);
       const s = await r.json();
       const ok = !!s.gatewayRunning;
-      setPill(document.getElementById('service'), ok ? 'ok' : 'bad', ok ? 'Up (as of last push)' : 'Down (as of last push)');
+
+      // Staleness check: if the snapshot is old, treat it as likely offline.
+      const ts = s.generatedAtUtc ? Date.parse(s.generatedAtUtc) : NaN;
+      const ageMin = Number.isFinite(ts) ? (Date.now() - ts) / 60000 : NaN;
+      const stale = Number.isFinite(ageMin) ? ageMin > 90 : true;
+
+      let state = ok ? 'ok' : 'bad';
+      let label = ok ? 'Up (as of last push)' : 'Down (as of last push)';
+      if (stale) {
+        state = 'warn';
+        label = 'Possibly offline (no update in ' + (Number.isFinite(ageMin) ? Math.round(ageMin) : 'unknown') + ' min)';
+      }
+
+      setPill(document.getElementById('service'), state, label);
       document.getElementById('updated').textContent = esc(s.generatedAtUtc || '—');
+
       const recent = (s.recentWork || []).slice(0,8).map(x => '• ' + x).join('\n');
       document.getElementById('recent').innerHTML = '<pre style="margin:0">' + esc(recent || '—') + '</pre>';
       document.getElementById('details').textContent = JSON.stringify(s, null, 2);
